# raspberry_pi_dev

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  cron_capture_job.sh  crontab.txt  packages.txt  pyproject.toml  requirements.txt
.streamlit/: requirements.txt
count_person/: __init__.py  main.py
count_person/captured_img/: .gitkeep
member_map/: __init__.py  main.py  member.csv
